# rails-superhero-cards

./: .dockerignore  .env.example  Dockerfile  Procfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: static-checks.yml
backend/: api.py  aws_service.py  card_generator.py  celery_worker.py  config.py  db.py  dependencies.py  enums.py  exceptions.py  llms.py  logging_config.py  main.py  models.py  tasks.py  utils.py  workflow.py  workflow_holiday.py
backend/migrations/: env.py
backend/migrations/versions/: 71ce061752e3_remove_image_base64_column.py  a54024507562_add_cards_table.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/common/: NavLink.jsx
frontend/src/components/form/: HeroCardForm.jsx  HolidayToggle.jsx  ImageUpload.jsx  SkillsInput.jsx  ThemedInput.jsx
frontend/src/components/layout/: Footer.jsx  Header.jsx  Pipes.jsx
frontend/src/components/result/: GeneratedCard.jsx
frontend/src/theme/: theme.jsx
frontend/src/utils/: constants.jsx
